# huitzil

./: .gitmodules  .travis.yml  README.md  __metadata__.py  pyproject.toml  setup.py
.github/workflows/: main.yml
assets/: preface-body-2.tex  readme.txt  rh-tablature.ly
etc/: dreams.txt  flight.txt
huitzil/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  tools.py
huitzil/builds/: flight-f.ly  music.ly  preface.tex
huitzil/etc/: dreams.txt  flight.txt
huitzil/makers/: DreamsMusicMaker.py  DreamsSegmentMaker.py  FlightScoreTemplate.py  FlightSegmentMaker.py
huitzil/materials/: __init__.py
huitzil/sections/: stylesheet.ily
huitzil/segments/: abbreviations.py
huitzil/stylesheets/: context-definitions.ily  contexts.ily  flight-context-definitions.ily  flight-contexts.ily  flight-stylesheet.ily  markups.ily  stylesheet.ily
huitzil/test/: illustrate_segments.py  run_tests_with_timing.py  test_huitzil_materials.py  test_huitzil_segments.py  test_materials.py  test_segments.py
huitzil/tools/: DreamsMusicMaker.py  DreamsRhythmDefinition.py  DreamsRhythmSpecifier.py  DreamsScoreTemplate.py  DreamsSegmentMaker.py  FlightScoreTemplate.py  FlightSegmentMaker.py  MarkupLibrary.py  ScoreTemplate.py  __init__.py  dashed_arrow.py  final_markup.py
makers/: DreamsMaker.py  DreamsMusicMaker.py  DreamsScoreTemplate.py  DreamsSegmentMaker.py  FlightMusicMaker.py  FlightScoreTemplate.py  FlightSegmentMaker.py  ScoreTemplate.py
segments/: abbreviations.py
stylesheets/: flight-stylesheet.ily  stylesheet.ily
(+891 files in other folders)
