[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huitzil"
version = "3.28"
description = "Huitzil (2014/19) for cello"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.28"]

[project.urls]
Homepage = "https://github.com/trevorbaca/huitzil"

[tool.setuptools]
packages = ["huitzil"]
package-dir = { "" = "source" }
